syntax = "proto3";

package greeter;

import "buf/validate/validate.proto";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);
}

service Farewell {
  rpc SayGoodBye(HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1 [(buf.validate.field).string.min_len = 3];
}

message HelloReply {
  string message = 1;
}
